--- a/frontChat/src/app/app.component.html
+++ b/frontChat/src/app/app.component.html
@@ -1,5 +1,8 @@
-<app-header></app-header>
-<app-login-inscription></app-login-inscription>
-<app-footer></app-footer>
+<header class="header"><app-header></app-header></header>
+
 
 <router-outlet></router-outlet>
+
+<footer class="footer"><app-footer></app-footer></footer>
+
+
