--- a/frontChat/src/app/components/footer/footer.component.html
+++ b/frontChat/src/app/components/footer/footer.component.html
@@ -1,1 +1,5 @@
-<p>footer works!</p>
+<nav class="nav-footer">
+  <a routerLink="/home" routerLinkActive="active">Home</a>
+  <a routerLink="/about" routerLinkActive="active">About</a>
+  <a routerLink="/contact" routerLinkActive="active">Contact</a>
+</nav>
