--- a/frontChat/src/app/pages/home/home.component.html
+++ b/frontChat/src/app/pages/home/home.component.html
@@ -1,4 +1,4 @@
-
-<a href="">Contact</a>
-<a href="">Conversation</a>
-
+<div class="button-group">
+  <button class="button" >Contact</button>
+  <button class="button" >Conversation</button>
+</div>
