--- a/frontChat/src/app/pages/messagerie/messagerie.component.html
+++ b/frontChat/src/app/pages/messagerie/messagerie.component.html
@@ -1,1 +1,11 @@
-<p>messagerie works!</p>
+<div>
+  <div class="message">
+      <p>user</p>
+      <p>message</p>
+
+  </div>
+  <form class="form-message">
+      <input type="text" placeholder="message">
+      <button type="submit">Envoyer</button>
+  </form>
+</div>
